--- a/sections/section_1_3.html
+++ b/sections/section_1_3.html
@@ -17,7 +17,7 @@
             <p>
                 Emily treated the thought <i>they think I'm weird</i> as if she literally were weird, so she decided not to approach anyone at the party. For Jack, the mere thought of speaking up in class was accompanied by palpitations, as if he were actually speaking, so he chose to say nothing. These examples demonstrate that when you take your thoughts literally (as facts) or <b><i>fuse</i></b> with them, they appear to have authority, as if they were spoken by a big monster, one so powerful that you have no choice but to act on his orders if you want to keep safe.
             </p>
-            <h3>Fusion: Your anxious thoughts send you down the path of avoidance. </h3>
+            <h3><b><i>Fusion</i></b>: Your anxious thoughts send you down the path of avoidance. </h3>
             <p>
                 On the other hand, when you are <b><i>defused</i></b> from your thoughts, you see them for what they are: a collection of words and images in your mind. This reduces their power, giving you the freedom to choose how to respond to them.
 
