--- a/sections/section_2_1.html
+++ b/sections/section_2_1.html
@@ -18,33 +18,31 @@
             <p>
                 We are all familiar with basic types of anxious thinking, such as:
             </p>
-            
-                <li><p>worrying (I won't fit in),</p></li>
-                <li><p>having anxious memories (It's just like that awful speech I gave in seventh grade),</p></li>
-                <li><p>evaluating or judging (This isn't going very well, You look like an idiot), and </p></li>
-                <li><p>making negative comparisons (He's way more interesting than I am). </p></li>
-
+            <p>
+                <li>worrying (I won't fit in),</li>
+                <li>having anxious memories (It's just like that awful speech I gave in seventh grade),</li>
+                <li>evaluating or judging (This isn't going very well, You look like an idiot), and </li>
+                <li>making negative comparisons (He's way more interesting than I am). </li>
+            </p>
             <p>
                 Other, slightly more elaborate types of thinking the socially anxious mind favors include the following.
-                
             </p>
-            <h3> Fortune-Telling: </h3>
             <p>
+                <b style='font-size:125%'> Fortune-Telling: </b>
                 When your mind predicts what will happen, usually something negative
             </p>
             <p> 
-                <b>EXAMPLE:</b> I won't have anything to say, I'll have a panic attack and won't be able to speak, and everyone will discover that I'm incompetent. 
+                <b>Example:</b> I won't have anything to say, I'll have a panic attack and won't be able to speak, and everyone will discover that I'm incompetent. 
             </p>
-            <h3>Mind Reading: </h3>
             <p> 
+                <b style='font-size:125%'>Mind Reading: </b>
                 When your mind tells you what others are thinking about you, usually in the form of judgmental thoughts. 
             </p> 
             <p>
-                <b>EXAMPLE:</b> thoughts starting with He thinks..., She thinks..., or They think.. (for example, She must think I'm a nervous wreck or They think I'm stupid and boring).
+                <b>Example:</b> thoughts starting with He thinks..., She thinks..., or They think.. (for example, She must think I'm a nervous wreck or They think I'm stupid and boring).
             </p>
-
-            <h3>"Shoulding": </h3>
             <p>
+                <b style='font-size:125%'>"Shoulding": </b>
                 Using statements that include the word "should," is a popular activity of the socially anxious mind.
             </p>
             <div id='exercise_3'></div>
