--- a/sections/section_2_2.html
+++ b/sections/section_2_2.html
@@ -15,20 +15,20 @@
         <!-- /header -->
 
         <div data-role="content">
-            <h3>Postmortem: </h3> 
             <p>
+                <b style='font-size:125%'>Postmortem: </b> 
                 When your mind rehashes or ruminates about what you think happened (or should have happened) in a social situation.The following is an example of a "postmortem" review that Jack engaged in after he gave a presentation at school:
             </p>
             <p>
                 <b>EXAMPLE:</b> <i>Oh no, I really screwed up that presentation. I should have prepared more. I can't believe I made that stupid comment about finances. And I forgot to mention the plan I've been preparing. What an idiot! The prof sure had a disappointed look on her face. I bet she dislikes having me in her class. I'm definitely going to fail!</i>
             </p>
-            <h3>The Spotlight Effect: </h3> 
             <p>
+                <b style='font-size:125%'>The Spotlight Effect: </b> 
                 To always feel as if you are the center of attention, as if a spotlight were shining on you for everyone to see (and judge you). 
             </p>
-            <h3>Generating Stories:</h3> 
             <p>
-                Generating Stories: generating stories specifically about who you are in social situations, sometimes pretty negative stories (for example, a story about you as a loser).
+                <b style='font-size:125%'>Generating Stories:</b> 
+                generating stories specifically about who you are in social situations, sometimes pretty negative stories (for example, a story about you as a loser).
             </p> 
             <div id='exercise_4'></div>
             <script>
