--- a/sections/section_3_1.html
+++ b/sections/section_3_1.html
@@ -14,8 +14,6 @@
         <!-- /header -->
 
         <div data-role="content">
-
-
             <p>
                 Here, we provide details about the strategies that are particularly helpful in defusing from the socially anxious mind. 
                 As you read through them, keep in mind that defusion strategies are not intended to belittle or ridicule your thought processes; they are meant to help you get some distance from your thoughts, notice the process of thinking, and liberate yourself from the tyranny of the fused mind.
@@ -25,21 +23,20 @@
             <p>
                 With this strategy, you simply acknowledge that the mind is thinking by saying to yourself, <i>I am having the thought that</i> ___________. Try it now by reading aloud the following two sentences, noticing any differences in their emotional impact:
                 <br>
-                <i>I am going to blush.
+                <li><i>I am going to blush.</i></li>
+                <li><i>I am having the thought that I am going to blush.</i></li>
                 <br>
-                I am having the thought that I am going to blush.</i>
-                <br>
-                What did you notice? Some people find the second sentence to be less anxiety provoking or to seem less "real." Try it again with a thought that is relevant for you (e.g. <i>my voice is going to quiver; I am going to sweat). 
+                What did you notice? Some people find the second sentence to be less anxiety provoking or to seem less "real." Try it again with a thought that is relevant for you (<b>e.g.</b> <i>my voice is going to quiver; I am going to sweat</i>). 
             </p>
 
             <h3> Naming What the Mind Is Doing: </h3>
             <p>
                 Here you name the type of thinking that your mind is engaged in. <b>EXAMPLES</b> are:
             </p><ul>
-                <li><p>I am worrying that my hands will shake</p></li>
-                <li><p>I'm engaged in mind reading right now</p></li>
-                <li><p>I'm doing the postmortem</p></li>
-                <li><p>I'm "shoulding" </p></li>
+                <li>I am worrying that my hands will shake</li>
+                <li>I'm engaged in mind reading right now</li>
+                <li>I'm doing the postmortem</li>
+                <li>I'm "shoulding" </li>
             <p></ul>
                 Some people find that this enables them to get out of their mind and refocus on their task, whatever that may be (e.g. doing a presentation, interacting at a party or making small talk). 
             </p>
