--- a/sections/section_2_1.html
+++ b/sections/section_2_1.html
@@ -30,14 +30,14 @@
                 When your mind predicts what will happen, usually something negative
             </p>
             <p> 
-                <b>Example:</b> I won't have anything to say, I'll have a panic attack and won't be able to speak, and everyone will discover that I'm incompetent. 
+                <b>Example:</b> <i>I won't have anything to say, I'll have a panic attack and won't be able to speak, and everyone will discover that I'm incompetent.</i> 
             </p>
             <p> 
                 <b style='font-size:125%'>Mind Reading: </b>
                 When your mind tells you what others are thinking about you, usually in the form of judgmental thoughts. 
             </p> 
             <p>
-                <b>Example:</b> thoughts starting with He thinks..., She thinks..., or They think.. (for example, She must think I'm a nervous wreck or They think I'm stupid and boring).
+                <b>Example:</b> thoughts starting with He thinks..., She thinks..., or They think.. (for example, <i>She must think I'm a nervous wreck</i> or <i>They think I'm stupid and boring</i>).
             </p>
             <p>
                 <b style='font-size:125%'>"Shoulding": </b>
