--- a/sections/section_3_1.html
+++ b/sections/section_3_1.html
@@ -31,7 +31,7 @@
 
             <h3> Naming What the Mind Is Doing: </h3>
             <p>
-                Here you name the type of thinking that your mind is engaged in. <b>EXAMPLES</b> are:
+                Here you name the type of thinking that your mind is engaged in. <b>Examples</b> are:
             </p><ul>
                 <li>I am worrying that my hands will shake</li>
                 <li>I'm engaged in mind reading right now</li>
