--- a/sections/section_3_1.html
+++ b/sections/section_3_1.html
@@ -29,17 +29,19 @@
                 <br>
             <p>
                 What did you notice? Some people find the second sentence to be less anxiety provoking or to seem less "real." Try it again with a thought that is relevant for you (<b>e.g.</b> <i>my voice is going to quiver; I am going to sweat</i>). 
-            </p>
+            </p>    
 
             <h3> Naming What the Mind Is Doing: </h3>
             <p>
                 Here you name the type of thinking that your mind is engaged in. <b>Examples</b> are:
-            </p><ul>
-                <li>I am worrying that my hands will shake</li>
-                <li>I'm engaged in mind reading right now</li>
-                <li>I'm doing the postmortem</li>
-                <li>I'm "shoulding" </li>
-            <p></ul>
+            </p>
+            <ul>
+                <li><i>I am worrying that my hands will shake</i></li>
+                <li><i>I'm engaged in mind reading right now</i></li>
+                <li><i>I'm doing the postmortem</i></li>
+                <li><i>I'm "shoulding" </i></li>
+            </ul>
+            <p>
                 Some people find that this enables them to get out of their mind and refocus on their task, whatever that may be (e.g. doing a presentation, interacting at a party or making small talk). 
             </p>
             
@@ -47,7 +49,8 @@
             <p>
                 A fun variation on naming the type of thinking is to give actual names to your thoughts, perhaps greeting or chatting with them as you would with your friends 
                 <br>
-                <b>e.g.</b> <i>Hello, Mind-Reading Randy; Thanks for showing up, "Shoulding" Shirley; Interesting comments, Negative Nelly.</i>
+                <br>
+                <b>Example: </b> <i>Hello, Mind-Reading Randy; Thanks for showing up, "Shoulding" Shirley; Interesting comments, Negative Nelly.</i>
             </p>
 
         </div>
