--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 
     <div data-role="popup" id="popupExercises" data-theme="a">
         <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+        <audio controls>
+            <source src="audio/beep.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
         <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
 
         <ul data-role="listview" data-theme="a">
@@ -226,6 +230,7 @@
 
             console.log("progress: "+progress);
         }
+
     </script>
 </body>
 
