--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <div data-role="popup" id="popupExercises" data-theme="a">
         <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
         <audio controls>
-            <source src="audio/Open Window.mp3" type="audio/mpeg">
+            <source src="audio/beep.ogg" type="audio/ogg">
+            <source src="audio/beep.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
         <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
