--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         // Cordova is ready
         //
         function onDeviceReady() {
-            playAudio("audio/beep.mp3");
+            playAudio("http://audio.ibeat.org/content/p1rj1s/p1rj1s_-_rockGuitar.mp3");
         }
 
         // Audio player
