--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <title>Hello World</title>
     </head>
     <body>
+        <audio controls>
+  <source src="audio/beep.ogg" type="audio/ogg">
+  <source src="audio/beep.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
