--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
     <div data-role="popup" id="popupExercises" data-theme="a">
         <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
-        <video src="audio/beep.mp3" onclick="this.play();"></video>
+        <video style='visibility:hidden' width="0" height="0" id='audio' src="audio/Open Window.mp3" onclick="this.play();"></video>
+        <a href="#" onclick="playAudio();" data-role="button">play</a>
         <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
 
         <ul data-role="listview" data-theme="a">
@@ -153,6 +154,11 @@
     </div>
 
     <script>
+        function playAudio() {
+            console.log("test");
+            var audio = document.getElementById("audio");
+            audio.play();
+        }
         function clear_Storage() {
             localStorage.clear();
             var phoneName = device.model;
