--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <script src="phonegap.js"></script>
     <script src="device.js"></script>
     <script src="local-notification.js"></script>
-    <script src="Media.js"></script>
-    <script src="MediaError.js"></script>
 
 </head>
 
@@ -47,8 +45,6 @@
 
     <div data-role="popup" id="popupExercises" data-theme="a">
         <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
-        <video style='visibility:hidden' width="0" height="0" id='audio' src="audio/Open Window.mp3" onclick="this.play();"></video>
-        <a href="#" onclick="playAudio();" data-role="button">play</a>
         <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
 
         <ul data-role="listview" data-theme="a">
@@ -154,10 +150,20 @@
     </div>
 
     <script>
-        function playAudio() {
-            console.log("test");
-            var audio = document.getElementById("audio");
-            audio.play();
+        if (!localStorage['init']) {
+            localStorage['audio'] = true;
+
+            var now = new Date().getTime();
+            window.plugin.notification.local.add({ 
+                id:         1, // is converted to a string
+                title:      'Reminder',
+                message:    'Have you completed your anxiety exercise today?',
+                date:       now,
+                repeat:     'daily'
+            });
+
+
+            localStorage['init'] = true;
         }
         function clear_Storage() {
             localStorage.clear();
