--- a/sections/section_1_1.html
+++ b/sections/section_1_1.html
@@ -15,7 +15,7 @@
             <h1>Introduction</h1>
 
         </div>
-        <video style='visibility:hidden' width="0" height="0" id='audio1_1' src="../audio/Open Window.mp3"></video>
+        <video style='visibility:hidden' width="0" height="0" id='audio1_1' src="../audio/1_1.m4a"></video>
 
         <script>
             //autoload audio
