--- a/sections/section_1_1.html
+++ b/sections/section_1_1.html
@@ -18,7 +18,8 @@
 
         <video style='visibility:hidden' width="0" height="0" id='audio1_1'>
             <source src="../audio/1_1.mp4">
-
+            <source src="../audio/1_1.m4a">
+            <source src="../audio/1_1.mp3">
         </video>
 
         <script>
