--- a/sections/section_1_1.html
+++ b/sections/section_1_1.html
@@ -16,11 +16,11 @@
 
         </div>
 
-        <video style='visibility:hidden' width="0" height="0" id='audio1_1'>
-            <source src="../audio/1_1.mp4">
-            <source src="../audio/1_1.m4a">
-            <source src="../audio/1_1.mp3">
-        </video>
+<audio style='visibility:hidden' width="0" height="0" id='audio1_1' controls>
+  <source src="../audio/1_1.mp3" type="audio/mpeg">
+  <source src="../audio/1_1.ogg" type="audio/ogg">
+  Your browser does not support this audio format.
+</audio>
 
         <script>
             //autoload audio
