--- a/sections/section_1_1.html
+++ b/sections/section_1_1.html
@@ -16,13 +16,13 @@
 
         </div>
 
-        <audio style='visibility:hidden' width="0" height="0" id='audio1_1' controls>
+        <video style='visibility:hidden' width="0" height="0" id='audio1_1' controls>
             <source src="../audio/1_1.mp3" type="audio/mpeg">
             <source src="../audio/1_1.ogg" type="audio/ogg">
             <source src="../audio/1_1.m4a" type="audio/m4a">
             <source src="../audio/1_1.mp4" type="audio/mp4">
             Your browser does not support this audio format.
-        </audio>
+        </video>
 
         <script>
             //autoload audio
