--- a/sections/section_1_1.html
+++ b/sections/section_1_1.html
@@ -18,11 +18,13 @@
 
         <audio style='visibility:hidden' width="0" height="0" id='audio1_1' controls>
             <source src="../audio/1_1.mp4" type="video/mp4">
+            <source src="../audio/1_1.mp3" type="video/mp3">
             Your browser does not support this audio format.
         </audio>
-
+        
         <script>
             //autoload audio
+
             if (localStorage['audio'] === 'true') {
                 document.getElementById("audio1_1on").style.visibility = "hidden";
                 document.getElementById("audio1_1off").style.visibility = "visible";
